[gd_scene load_steps=4 format=3 uid="uid://btty7ibvu737s"]

[ext_resource type="Script" path="res://Scripts/gui.gd" id="1_fuaco"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jk78b"]
bg_color = Color(0.295867, 0.295867, 0.295866, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r0yq0"]
bg_color = Color(0.545845, 0.0329132, 0.015162, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[node name="GUI" type="CanvasLayer"]
script = ExtResource("1_fuaco")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 10

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopRow" type="HBoxContainer" parent="MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/Rows/TopRow"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_vertical = 1
tooltip_text = "This is a muh fuggin health bar!"
theme_override_styles/background = SubResource("StyleBoxFlat_jk78b")
theme_override_styles/fill = SubResource("StyleBoxFlat_r0yq0")
value = 30.0
show_percentage = false

[node name="MiddleRow" type="HBoxContainer" parent="MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 12.0

[node name="BottomRow" type="HBoxContainer" parent="MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3

[node name="AmmoSection" type="HBoxContainer" parent="MarginContainer/Rows/BottomRow"]
layout_mode = 2
size_flags_horizontal = 10

[node name="CurrentAmmo" type="Label" parent="MarginContainer/Rows/BottomRow/AmmoSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "10
"

[node name="AmmoSeparator" type="Label" parent="MarginContainer/Rows/BottomRow/AmmoSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "/"

[node name="MaxAmmo" type="Label" parent="MarginContainer/Rows/BottomRow/AmmoSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "10
"
